--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1></h1>
-    <script src="index.ts"></script>
+    <script src="./index.ts"></script>
   </body>
 </html>
